[tool.poetry]
name = "workbench/test-diagrams.py"
version = "0.1.0"
description = ""
authors = ["Elie Rotenberg <elie@rotenberg.io>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
diagrams = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
